# textual-fastdatatable

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  static.yml  test.yml
scripts/: benchmark.py  run_arrow_wide.py  run_builtin_wide.py
src/scripts/: benchmark.py  perf.py  run_arrow_wide.py  run_builtin_wide.py  run_numpy_wide.py
src/textual_fastdatatable/: __init__.py  __main__.py  backend.py  column.py  data_table.py  formatter.py
stubs/pyarrow/: __init__.pyi  compute.pyi  lib.pyi  parquet.pyi  types.pyi
tests/: conftest.py
tests/data/: lap_times_100.parquet  lap_times_1000.parquet  lap_times_10000.parquet  lap_times_100000.parquet  wide_10000.parquet  wide_100000.parquet
tests/snapshot_tests/: test_snapshots.py
tests/snapshot_tests/__snapshots__/: test_snapshots.ambr
tests/snapshot_tests/snapshot_apps/: auto-table.py  data_table.py  data_table_add_column.py  data_table_add_row_auto_height.py  data_table_column_cursor.py  data_table_max_width.py  data_table_no_render_markup.py  data_table_null_mixed_cols.py  data_table_range_cursor.py  data_table_remove_row.py  data_table_row_cursor.py  data_table_row_labels.py  data_table_sort.py  data_table_style_order.py  datatable_hot_reloading.py  empty.py  empty_add_col.py  from_parquet.py  from_pydict_with_col_labels.py  from_records.py  no_rows.py  no_rows_empty_sequence.py
tests/unit_tests/: test_arrow_backend.py  test_backends.py  test_create_backend.py  test_native_backend.py  test_numpy_backend.py
