[project]

name = "textual-fastdatatable"
version = "0.13.0"
requires-python = ">=3.9,<3.14"
description = "A performance-focused reimplementation of Textual's DataTable widget, with a pluggable data storage backend."
authors = [
    { name = "Ted Conbeer", email = "tconbeer@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "textual>=0.89.1",
    "tzdata>=2023; sys_platform == 'win32'", # arrow timestamptz support on windows
    "pyarrow>=18.1.0,<22",

    # wheel pins: these packages don't build wheels for all Pythons
    "numpy>=2.0.0,<2.1.0; python_version < '3.10'",
    "numpy>=2.1.0,<2.3.0; python_version >= '3.10'",

    "pandas>=2.2.1,<3; python_version < '3.13'",
    "pandas>=2.2.3,<3; python_version >= '3.13'",
]


[project.optional-dependencies]

polars = ["polars>=1,<2"]


[dependency-groups]
dev = [
    "pre-commit>=3.3,<4",
    "textual-dev==1.7.0",
    "pyinstrument>=5,<6",
]
static = [
    "ruff>=0.14,<0.15",
    "mypy>=1.18.0,<2",
    "pandas-stubs>=2,<3",
]
test = [
    "textual==6.3.0",
    "pytest>=7.3.1,<9.0.0",
    "pytest-asyncio==0.21.0",
    "pytest-textual-snapshot==0.4.0",
    "pyarrow==18.1.0",
    "polars==1.34.0",
]


[project.urls]

Repository = "https://github.com/tconbeer/textual-fastdatatable"


[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]

packages = [
    "src/textual_fastdatatable",
]

[tool.hatch.build.targets.sdist]

only-include = [
    "src",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml"
]


[tool.ruff]

target-version = "py39"


[tool.ruff.lint]

select = ["A", "B", "E", "F", "I"]


[tool.mypy]

python_version = "3.9"
files = [
    "src/**/*.py",
    "tests/unit_tests/**/*.py"
]
mypy_path = "stubs,src"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true

